# FrenchTouchServer

./: .gitignore  Cargo.toml  README.md  generate-certificates.sh  openssl.cnf  schema.sql  sqlite.db  start.sh
src/: main.rs
src/api/: api_delete.rs  api_files.rs  api_insert.rs  api_search.rs  api_security.rs  api_select.rs  api_update.rs  api_utils.rs  image_handler.rs  mod.rs  run_api.rs
src/db/: builder.rs  db_create.rs  db_delete.rs  db_exist.rs  db_getter.rs  db_insert.rs  db_main.rs  db_search.rs  db_security.rs  db_select.rs  db_update.rs  db_utils.rs  mod.rs  structs.rs
