[package]
name = "ft-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = { version = "4.10.2", features = ["openssl"] }
futures = "0.3.31"
mime = "0.3.17"
openssl = "0.10.71"
regex = "1.11.1"
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
text_io = "0.1.13"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
